fabrik/internal/engine/testdata/jobs_cron_unexported.txt
Generated bootstrap code calls a //fabrik:cron function as a
package-qualified symbol, so an unexported function cannot be referenced
and is rejected at generation.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/cli v0.0.0

replace github.com/gofabrik/fabrik/cli => CLIDIR

require github.com/gofabrik/fabrik/jobs v0.0.0

replace github.com/gofabrik/fabrik/jobs => JOBSDIR
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- shared/shared.go --
package shared

import (
	"github.com/gofabrik/fabrik/jobs"

	"github.com/gofabrik/fabrik/cli"
)

//fabrik:provider
func NewJobStore() (jobs.Store, error) { return jobs.NewMemoryStore(), nil }

//fabrik:cli:command
func Boot(ctx cli.Context, mgr *jobs.Manager) error { return nil }
-- cleanup/cleanup.go --
package cleanup

import "context"

//fabrik:cron name=nightly schedule="0 3 * * *"
func purgeOld(ctx context.Context) error { return nil }
-- want/diags --
error: cleanup/cleanup.go:5:1: //fabrik:cron function purgeOld must be exported
  help: generated code calls it as a package-qualified symbol; capitalize the name
